sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:25: error: not found: value l
  l=2
  ^AlgShellSort:28: error: not found: value l
    l=l+1
    ^AlgShellSort:29: error: not found: value l
    if(l==3){
       ^AlgShellSort:32: error: not found: value l
    if(l==4){
       ^AlgShellSort:35: error: not found: value l
    if(l==5){
       ^AlgShellSort:38: error: not found: value l
    if(l==6){
       ^AlgShellSort:41: error: not found: value l
    if(l==7){
       ^