sort.basic.shell.AlgShellSort.scala.code
def insertionSort(n:Int) {
  var lgr = getNombreValeurs()
  var v = 0
  var j =1
  var casePourV = 0
  for (i <- 1 to lgr -1){
    v=getValeur(i)
    casePourV = i
    j =1
    while (j*n<= i && !plusPetitQue(i-j*n,v)) {
        copie(i-j*n,i-(j-1)*n)
        casePourV = i-j*n
        j=j+1
    }
    setValeur(casePourV , v) 
  }
}


def shellSort()  {
  var lgr = getNombreValeurs()
  var ecart = 0
  ecart = 57  
  l=2
  while(ecart >0){
    insertionSort(ecart)
    l=l+1
    if(l==3){
      ecart = 23
    }
    if(l==4){
      ecart = 10
    }
    if(l==5){
      ecart = 4
    }
    if(l==6){
      ecart = 1
    }
    if(l==7){
      ecart = 0
    }
  }
}